syntax = "proto3";
package auth;

option go_package = "github.com/aspirin100/gRPC-SSO/protos/gen/go/sso;ssov1";

service Auth{
    rpc Register(RegisterRequest) returns (RegisterRespons);
    rpc Login(LoginRequest) returns (NewTokenPairResponse);
    rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse);
    rpc RefreshTokenPair(RefreshRequest) returns (NewTokenPairResponse);
}

message RegisterRequest{
    string email = 1;
    string password = 2;
}

message RegisterRespons{
    string userID = 1; // UUID
}

message LoginRequest{
    string email = 1;
    string password = 2;
    int32 appID = 3;
}

message NewTokenPairResponse{
    string accessToken = 1; // JWT
    string refreshToken = 2;
}

message IsAdminRequest{
    string userID = 1; //UUID
}

message IsAdminResponse{
    bool isAdmin = 1;
}

message RefreshRequest{
    string userID = 1; //UUID
    string refreshToken = 2;
}

